# travelpredict

./: .env.example  .gitignore  archive-processed.py  departure-times.ipynb  deviations.csv  download-data.py  find-deviations.py  plot-deviations.ipynb  plot-refined.ipynb  pyproject.toml
deviations/: deviations_20241210_133351.csv  deviations_20241212_170025.csv  deviations_20241213_090004.csv  deviations_20241213_170001.csv  deviations_20241214_090005.csv  deviations_20241214_170002.csv  deviations_20241215_090005.csv  deviations_20241215_170001.csv  deviations_20241216_090005.csv  deviations_20241216_170002.csv  deviations_20241217_090005.csv  deviations_20241217_170002.csv  deviations_20241218_090005.csv  deviations_20241218_170001.csv  deviations_20241219_090008.csv  deviations_20241219_170002.csv  deviations_20241220_090005.csv  deviations_20241220_170001.csv  deviations_20241221_090004.csv  deviations_20241221_170001.csv  deviations_20241222_090004.csv  deviations_20241222_170002.csv  deviations_20241223_090006.csv  deviations_20241223_170003.csv  deviations_20241224_090005.csv  deviations_20241224_170001.csv  deviations_20241225_090005.csv  deviations_20241225_170002.csv  deviations_20241226_090005.csv  deviations_20241226_170001.csv  deviations_20241227_090003.csv  deviations_20241227_170001.csv  deviations_20241228_090004.csv  deviations_20241228_170001.csv  deviations_20241229_090005.csv  deviations_20241229_170002.csv  deviations_20241230_090005.csv  deviations_20241230_170002.csv  deviations_20241231_090004.csv  deviations_20241231_170002.csv  (+604 more)
(+13 files in other folders)
